# Bubbles-Dive-Planner

./: .gitignore  Bubbles-Dive-Planner.sln  Cargo.toml  Makefile.toml  Notes.md  README.md  bacon.toml  run.sh  rust-toolchain.toml
.github/: bug_report.md  user_story.md
.github/ISSUE_TEMPLATE/: bug_report.md  enhancement.md  feature.md  feature_request.md  investigation.md  spike.md  user_story.md
.github/workflows/: TestCode.yml  action.yml  actions.yml  ci.yml  rust_ci.yml  rust_release.yml
BubblesDivePlanner/: App.axaml  App.axaml.cs  App.xaml  App.xaml.cs  BubblesDivePlanner.csproj  BubblesDivePlanner.sln  Program.cs  ViewLocator.cs  app.manifest
BubblesDivePlanner/Application/: MainWindowViewModel.cs  ViewLocator.cs  ViewModelBase.cs
BubblesDivePlanner/ApplicationEntry/: DivePlannerService.cs  IMainWindowModel.cs  MainWindow.xaml  MainWindow.xaml.cs  MainWindowViewModel.cs  ViewLocator.cs
BubblesDivePlanner/CentralNervousSystemToxicity/: CentralNervousSystemToxicityView.xaml  CentralNervousSystemToxicityViewModel.cs  ICentralNervousSystemToxicityModel.cs
BubblesDivePlanner/Commands/: AbValuesCommand.cs  AmbientPressureCommand.cs  CompartmentLoadCommand.cs  MaximumSurfacePressureCommand.cs  TissuePressureCommand.cs  ToleratedAmbientPressureCommand.cs
BubblesDivePlanner/Controllers/: CylinderController.cs  CylinderPrototype.cs  DecompressionController.cs  DecompressionProfileController.cs  DiveBoundaryController.cs  DiveCeilingController.cs  DiveController.cs  DivePlannerService.cs  DiveStageCommandFactory.cs  DiveStageRunner.cs  DiveStagesController.cs  GasMixtureController.cs  GasUsageController.cs  IDiveController.cs  IDiveStagesController.cs  MaximumOperatingDepthController.cs  NewApplicationStateController.cs  VisibilityController.cs
BubblesDivePlanner/DataAccess/: FileController.cs
BubblesDivePlanner/Decompression/: DecompressionController.cs
BubblesDivePlanner/DecompressionProfile/: DecompressionProfileController.cs  (+4 more)
BubblesDivePlannerTests/: BubblesDivePlannerTests.csproj  BubblesDivePlannerTests.sln  TestFixture.cs  UnitTest1.cs
DivePlannerMk3/: App.xaml.cs  DivePlannerMk3.csproj  DivePlannerMk3.sln  Program.cs  ViewLocator.cs
DivePlannerTests/: DivePlanUiTests.cs  DivePlannerTests.csproj  DiveProfileServiceTests.cs
src/: commands.rs  controllers.rs  main.rs  models.rs  presenters.rs  test_fixture.rs  view_models.rs  views.rs
src/commands/: mod.rs  (+4 more)
(+1459 files in other folders)
