[package]
name = "bubbles-dive-planner-rust"
version = "1.4.0"
authors = ["Skippy <steelstone3@gmail.com>"]
edition = "2021"
homepage = "https://github.com/Steelstone3/Bubbles-Dive-Planner-Console"
repository = "https://github.com/Steelstone3/Bubbles-Dive-Planner-Console"
license = "GPLv3"
readme = "README.md"
include = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
rstest = "0"

[dependencies]
iced = "0.10"
iced_aw = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
