[package]
name = "bubbles-dive-planner-iced"
version = "1.5.1"
authors = ["Skippy <steelstone3@gmail.com>"]
edition = "2021"
homepage = "https://github.com/Steelstone3/Bubbles-Dive-Planner/tree/iced-version"
repository = "https://github.com/Steelstone3/Bubbles-Dive-Planner/tree/iced-version"
license = "GPLv3"
readme = "README.md"
include = []

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
rstest = "0"

[dependencies]
iced = "0.13"
iced_aw = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
